ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0, 7.1.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.1
    • Repl 2023-09-04
    • 148
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, we check the feature flag to determine which code path should we go during resharding collection cloning, which could lead to unexpected behavior when the FCV downgrades and the resharding collection cloner is switched in the middle.

      Note: Though setFCV aborts all running resharding, it first sets FCV to transition FCV so the running resharding operations can see the feature flag change before it is aborted.

            Assignee:
            Jiawei Yang
            Reporter:
            Jiawei Yang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: