SERVER-80408 Only check feature flag at the beginning of resharding cloning